test/corpus/struct.txt
===
Struct Declaration with no fields
===

struct Empty {}

---

(source_file
  (struct_declaration
    name: (identifier)))

===
Struct Declaration with one field
===

struct User {
    username
}

---

(source_file
  (struct_declaration
    name: (identifier)
    field: (struct_field
      name: (identifier))))

===
Struct Declaration with multiple fields
===

struct Point {
    x,
    y,
    z
}

---

(source_file
  (struct_declaration
    name: (identifier)
    field: (struct_field
      name: (identifier))
    field: (struct_field
      name: (identifier))
    field: (struct_field
      name: (identifier))))

===
Struct Declaration with multiple fields and trailing comma
===

struct Color {
    red,
    green,
    blue,
}

---

(source_file
  (struct_declaration
    name: (identifier)
    field: (struct_field
      name: (identifier))
    field: (struct_field
      name: (identifier))
    field: (struct_field
      name: (identifier))))
