test/corpus/try_operator.txt
==================
Basic try operator usage
==================

let num = parse_int(input)?;
return num * 2;

let val = foo()?.bar()?;
process(get_value()?)?;

---

(source_file
  (let_statement
    (identifier)
    (try_expression
      (call_expression
        (path
          (identifier))
        (argument_list
          (path
            (identifier))))))
  (return_statement
    (binary_expression
      (path
        (identifier))
      (integer)))
  (let_statement
    (identifier)
    (try_expression
      (call_expression
        (member_expression
          (try_expression
            (call_expression
              (path
                (identifier))
              (argument_list)))
          (identifier))
        (argument_list))))
  (expression_statement
    (try_expression
      (call_expression
        (path
          (identifier))
        (argument_list
          (try_expression
            (call_expression
              (path
                (identifier))
              (argument_list))))))))
