test/corpus/vector.txt
===
Empty Vector
===

[]

---

(source_file
  (vector))

===
Vector with one integer
===

[1]

---

(source_file
  (vector
    (integer)))

===
Vector with multiple primitives
===

["hello", 42, true]

---

(source_file
  (vector
    (static_string)
    (integer)
    (boolean)))

===
Vector with trailing comma
===

[1, 2, ]

---

(source_file
  (vector
    (integer)
    (integer)))

===
Vector with nested vector
===

[[1, 2], ["a", "b"]]

---

(source_file
  (vector
    (vector
      (integer)
      (integer))
    (vector
      (static_string)
      (static_string))))

===
Vector with mixed types and trailing comma
===

[false, "test", 123, [true, "nested"], ]

---

(source_file
  (vector
    (boolean)
    (static_string)
    (integer)
    (vector
      (boolean)
      (static_string))))
